2000-02-07  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.

2000-02-07  Akim Demaille  <akim@epita.fr>

	Start a new series of tests which check the semantics.

	* acgeneral.m4 (AC_CHECK_MEMBER): It is not smart to define
	ac_Foo, and use AC_Foo.  Got rid of AC_Member_Aggregate and
	AC_Member_Member which were complicating more than simplifying.
	(AC_CHECK_DECLS): Use m4 lists.
	(AC_CHECK_TYPES): A comma was missing.
	* autoheader.m4: (AC_CHECK_DECLS): Use m4 lists.
	* doc/autoconf.texi (Generic Declarations): AC_CHECK_DELCS uses m4
	lists.
	* tests/semantics.m4: New file.  Collection of semantical tests:
	verify that the tests are positive and negative when appropriate.
	Test AC_CHECK_MEMBERS, AC_CHECK_DECLS and AC_CHECK_TYPES.

2000-02-04  Akim Demaille  <akim@epita.fr>

	* tests/Makefile.am (macros.m4): Fix the sed snippet.

2000-02-04  Akim Demaille  <akim@epita.fr>

	* testsuite/autoconf.g/init.exp: Removed, test performed by
	tests/syntax.m4.
	* testsuite/autoconf.g/sizeof.exp: Likewise.
	* testsuite/autoconf.s/defines.exp: Likewise.
	* configure.in (AC_OUTPUT): Adjusted.
	* Makefile.am (SUBDIRS): Adjusted.

2000-02-04  Akim Demaille  <akim@epita.fr>

	* tests/syntax.m4: Test AC_CHECK_SIZEOF.
	* tests/Makefile.am (CLEANFILES, DISTCLEANFILES): Adjusted.
	(macros.m4): Use tmp dest files ($@-t), not directly `$@'.

2000-02-04  Akim Demaille  <akim@epita.fr>

	Hide AH_HOOK behind AH_DEFUN.

	* autoheader.m4 (AH_DEFUN): New macro.  Combination of define and
	AH_HOOK.
	(AC_TRY_RUN, AC_DEFINE, AC_DEFINE_UNQUOTED, AC_CHECK_LIB,
	AC_CHECK_HEADERS, AC_CHECK_HEADERS_DIRENT, AC_CHECK_DECLS,
	AC_CHECK_FUNCS, AC_CHECK_SIZEOF, AC_PROG_LEX, AC_CHECK_MEMBERS,
	AC_CHECK_TYPE, AC_FUNC_ALLOCA, AC_CHECK_TYPES, AC_C_CHAR_UNSIGNED,
	AC_AIX, AC_F77_WRAPPERS, AC_CONFIG_HEADER): All the former calls
	to define and AH_HOOK in autoheader.m4 are replaced by AH_DEFUN.

2000-02-04  Akim Demaille  <akim@epita.fr>
